Criando e estilizando componete de header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 </head>
 
 <body>
-
+  <header>
+    <nav>
+      <li>Home</li>
+      <li>Contato</li>
+      <li>Sobre</li>
+    </nav>
+  </header>
 </body>
 
 </html>
